# galgebra

./: .gitignore  .gitpod.yml  .lgtm.yml  .mailmap  .readthedocs.yaml  .travis.yml  .zenodo.json  CITATION.md  Dockerfile  GA.py  GAPrint.py  GAdebug.py  GAdir.py  GenerateTest.py  INSTALL  LICENSE  Manifold.py  README  README.md  Smith Sphere.ipynb  Smith_Sphere.py  Vector.py  circle-build-package  codecov.yml  color_text.py  conftest.py  example_print.py  justfile  laga.py  lt.py  manifold_surf.py  manifold_test.py  metric.py  mv.py  printer.py  pyproject.toml  readthedocs.yml  setgapth.py  setup.cfg  setup.py  (+2 more)
.circleci/: config.yml
.ipynb_checkpoints/: Smith Sphere-checkpoint.ipynb
Html Docs/: Makefile
LaTeX docs/: GA.aux  GA.tex  GA.toc
Macdonald/: Algebras.py  cm3.ipynb
doc/: GA.tex  Makefile  README.md  api.rst  bibliography.rst  bundled-resources.rst  changelog.rst  conf.py  galgebra.aux  galgebra.md  galgebra.out  galgebra.tex  galgebra.toc  galgebra_guide.ipynb  galgebra_guide.rst  getting-started.rst  index.rst  installation.rst  make.bat  math-config.txt  migration.rst  module-components.rst  old_installation.md  old_introduction.md  old_migration_guide.md  readthedocs-pip-requirements.txt  refs.bib  sympy-representation.rst  used_by.md
docs/: Makefile  conf.py
example/: Overdot.py
examples/: 1d_grad.py~  README.md  Spherical.py~  dirac_derive.py~  exp_test.py  ipy.py  latex_matrix.py  latex_print_test.py  make_test.py~  manifold_surf.py~  manifold_test.py  probNotSolenoidal.py  products.py  simple_check.py~  simple_test_latex.py  simpletest.py  spherical.py  spherical.tex  test.py  test_latex.py  test_my_import.py  test_physics.py
galgebra-master/: INSTALL  LICENSE
(+458 files in other folders)
